# .JET

./: CMakeLists.txt
Core/: Def.h  Frame.c  Frame.h  JET.c  JET.h  NativeStack.c  NativeStack.h  Stack.c  Stack.h  StringArray.c  StringArray.h  Thread.c  Thread.h  ThreadStack.h
Frames/: Frame.h  FrameStack.c  FrameStack.h  LCTypes.c  LCTypes.h  LCVariablesList.h  OperandStack.h
Heap/: Heap.c  HeapChunk.h
Loader/: CPInfo.cpp  CPInfo.h  ClassFile.cpp  ClassFile.h  ConstantPool.cpp  ConstantPool.h  Loader.cpp  Loader.h  Main.cpp
NonHeap/: Attribute.c  Attribute.h  CPoolMember.h  Class.h  ConstantPool.cpp  ConstantPool.h  Field.c  Field.h  FieldArray.c  FieldArray.h  MethodArea.cpp  MethodArea.h  Object.cpp  Object.h  PermanentGeneration.cpp  PermanentGeneration.h
TS/PrimitiveTypes/FloatingTypes/: Dobule.c  Dobule.h  Double.h  Float.h
TS/PrimitiveTypes/IntegerTypes/: Boolean.h  Byte.c  Byte.h  Int.c  Int.h  Long.c  Long.h  ReturnAddress.h
TS/ReferenceTypes/: ArrayType.c  ArrayType.h  ClassType.h  InterfaceType.c  InterfaceType.h
cjvm/Loader/: CPInfo.h  ConstantPool.h  Loader.cpp  Loader.h  Main.cpp
cjvm/class_analyzer/: class_parser.cpp  class_parser.h
cjvm/class_analyzer/object_parser/: parser_service.cpp  parser_service.h
cjvm/core/: Def.h  Thread.h  ThreadStack.c  ThreadStack.h  frame_stack.cpp  frame_stack.h  jet.cpp  jet.h  native_stack.cpp  native_stack.h  thread.cpp  thread.h  thread_stack.cpp  thread_stack.h
cjvm/io/: Loader.cpp  Loader.h
cjvm/jvm_frames/: Frame.h  LCTypes.h  LCVariablesList.c  OperandStack.c  frame.cpp  frame.h  local_mut.cpp  local_mut.h  operand_locals.cpp  operand_locals.h  operand_stack.cpp  operand_stack.h
cjvm/jvm_global/: AttributeList.c  AttributeList.h  CPoolMember.c  Class.c  Class.h  PermanentGeneration.c
cjvm/jvm_global/cgc_jvm/: Heap.h  HeapChunk.c  HeapChunk.h
cjvm/jvm_types/: CPInfo.h  ClassFile.h  class.c  class.h  field_info.c  field_info.h  line_number_table.c  line_number_table.h  local_variable_table.c  local_variable_table.h  local_variable_type_table.c  local_variable_type_table.h  method_info.c  method_info.h  stack_map_frame.c  stack_map_frame.h
cjvm/jvm_types/attributes/: attribute_info.c  attribute_info.cpp  attribute_info.h  code_attribute.c  code_attribute.cpp  code_attribute.h  enclosing_method_attribute.c  enclosing_method_attribute.h  exceptions_attribute.c  exceptions_attribute.h  inner_classes_attribute.c  inner_classes_attribute.h  line_number_table_attribute.c  line_number_table_attribute.h  local_variable_table_attribute.c  local_variable_table_attribute.h  local_variable_type_table_attribute.c  local_variable_type_table_attribute.h  signature_attribute.c  signature_attribute.h  source_debug_extension_attribute.c  source_debug_extension_attribute.h  source_file_attribute.c  source_file_attribute.h  stack_map_table_attribute.c  stack_map_table_attribute.h  synthetic_attribute.c  synthetic_attribute.h  sythetic_attribute.c  sythetic_attribute.h
cjvm/jvm_types/constant_pool_types/: constant_class_info.h  constant_double_info.h  constant_field_ref_info.h  constant_float_info.h  constant_integer_info.h  constant_interface_method_ref_info.h  constant_invoke_dynamic_info.h  constant_long_info.h  constant_method_handle_info.h  constant_method_ref_info.h  constant_method_type_info.h  constant_name_and_type_info.h  constant_string_info.h  constant_utf8_info.h
cjvm/jvm_types/exceptions/: exception_table.c  exception_table.h
cjvm/jvm_types/frames/: append_frame.h  chop_frame.h  full_frame.cpp  full_frame.h  same_frame.h  same_frame_extended.h  same_locals_1_stack_item_frame.h  same_locals_1_stack_item_frame_extended.h
cjvm/jvm_types/primitive_types/FloatingTypes/: Double.c  Float.c
cjvm/jvm_types/primitive_types/IntegerTypes/: Boolean.c  Byte.h  Char.c  Char.h  ReturnAddress.c  Short.c  Short.h
cjvm/jvm_types/reference_types/: ClassType.c  ClassType.h
cjvm/jvm_types/var_info/: double_variable_info.h  float_variable_info.h  integer_variable_info.h  long_variable_info.h  null_variable_info.h  object_variable_info.h  top_variable_info.h  uninitialized_variable_info.h  uninitializedthis_variable_info.h  verification_type_info.h
